# polar-examples

dynamic-not-editable-pricing/: main.py
with-analog/: README.md  package-lock.json  package.json  vite.config.ts
with-angular/: package-lock.json
with-cloudflare-workers/: package-lock.json  package.json
with-cloudflare-workers/src/: index.ts
with-django/: .env.example  README.md  requirements.txt
with-django/config/: __init__.py  settings.py  urls.py
with-django/polar_app/: __init__.py  apps.py  urls.py  views.py
with-flask/: README.md  main.py  requirements.txt
with-golang-gin/: .env.example  .gitignore  README.md  go.mod  go.sum  main.go
with-java-springboot/: .env.example  .gitignore  README.md  pom.xml
with-nestjs/: README.md  package-lock.json  package.json  tsconfig.json
with-nestjs/src/: app.controller.ts  app.module.ts  main.ts
with-nextjs/: package-lock.json
with-nextjs-better-auth-cloudflare-workers/: .env.example  .gitignore  .prettierignore  README.md  auth-schema.ts  auth.ts  package-lock.json  package.json  wrangler.jsonc.example
with-nextjs-better-auth-cloudflare-workers/app/: page.tsx
with-nextjs-better-auth-cloudflare-workers/lib/: auth-client.ts  env.ts
with-nextjs-qstash-schedule-downgrades/: package-lock.json
with-php-laravel/: .env.example  .gitignore  README.md  composer.json
with-redwoodsdk/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json  vite.config.mts  worker-configuration.d.ts  wrangler.jsonc
with-rust-axum/: Cargo.toml  README.md
with-rust-axum/src/: main.rs
(+26 files in other folders)
